--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.iml
-.gradle
+/.gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -7,3 +7,6 @@
 /build
 /captures
 .externalNativeBuild
+/openCVLibrary320/build
+/openCVLibrary320/openCVLibrary320.iml
+/gradle
