--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        android:theme="@style/Theme.AppCompat">
 
         <activity
             android:name=".MainActivity"
@@ -21,6 +21,12 @@
         </activity>
         <activity android:name=".ImageManipulationsActivity" />
         <activity android:name=".CameraCalibrationActivity" />
+        <activity
+            android:name=".secondsight.CameraActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".secondsight.LabActivity"
+            android:screenOrientation="landscape" />
     </application>
 
     <supports-screens
@@ -33,6 +39,7 @@
     <uses-sdk android:minSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -45,6 +52,9 @@
         android:required="false" />
     <uses-feature
         android:name="android.hardware.camera.front.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.flash"
         android:required="false" />
 
 </manifest>
